# unimatrix

./: .devcontainer.json  .gitignore  .mcp copy.json  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml
crates/unimatrix-adapt/: Cargo.toml
crates/unimatrix-adapt/src/: config.rs  episodic.rs  lib.rs  lora.rs  persistence.rs  prototypes.rs  regularization.rs  service.rs  training.rs
crates/unimatrix-core/: Cargo.toml
crates/unimatrix-core/src/: adapters.rs  async_wrappers.rs  error.rs  lib.rs  observation.rs  traits.rs
crates/unimatrix-embed/: Cargo.toml
crates/unimatrix-embed/src/: config.rs  cross_encoder.rs  cross_encoder_tests.rs  download.rs  error.rs  lib.rs  model.rs  normalize.rs  onnx.rs  pooling.rs  provider.rs  test_helpers.rs  text.rs
crates/unimatrix-engine/: Cargo.toml
crates/unimatrix-engine/src/: auth.rs  coaccess.rs  confidence.rs  event_queue.rs  graph.rs  graph_expand.rs  graph_expand_tests.rs  graph_ppr.rs  graph_ppr_tests.rs  graph_suppression.rs  graph_tests.rs  lib.rs  project.rs  test_scenarios.rs  transport.rs  wire.rs
crates/unimatrix-engine/src/effectiveness/: mod.rs  tests_aggregate.rs  tests_classify.rs
crates/unimatrix-engine/tests/: pipeline_calibration.rs  pipeline_regression.rs  pipeline_retrieval.rs  test_scenarios_unit.rs
crates/unimatrix-learn/: Cargo.toml
crates/unimatrix-learn/src/: config.rs  ewc.rs  feedback.rs  lib.rs  persistence.rs  registry.rs  reservoir.rs  service.rs  training.rs
crates/unimatrix-learn/src/models/: classifier.rs  digest.rs  mod.rs  scorer.rs  traits.rs
crates/unimatrix-learn/tests/: retraining_e2e.rs
crates/unimatrix-observe/: Cargo.toml
crates/unimatrix-observe/src/: attribution.rs  baseline.rs  detection.rs  error.rs  files.rs  lib.rs  metrics.rs  parser.rs  phase_narrative.rs  report.rs  session_metrics.rs  source.rs  synthesis.rs  types.rs
crates/unimatrix-observe/src/detection/: agent.rs  friction.rs  mod.rs  scope.rs  session.rs
crates/unimatrix-observe/src/domain/: evaluator.rs  mod.rs
crates/unimatrix-observe/src/extraction/: dead_knowledge.rs  file_dependency.rs  implicit_convention.rs  knowledge_gap.rs  mod.rs  neural.rs  recurring_friction.rs  shadow.rs
crates/unimatrix-observe/tests/: detection_isolation.rs  domain_pack_tests.rs  extraction_pipeline.rs
crates/unimatrix-server/: Cargo.toml
crates/unimatrix-server/src/: audit.rs  background.rs  bridge.rs  categories.rs  coaccess.rs  coherence.rs  confidence.rs  contradiction.rs  embed_handle.rs  embed_reconstruct.rs  error.rs  export.rs  format.rs  hook.rs  identity.rs  lib.rs  main.rs  main_tests.rs  outcome_tags.rs  pidfile.rs  project.rs  registry.rs  response.rs  scanning.rs  server.rs  session.rs  shutdown.rs  snapshot.rs  test_support.rs  tools.rs  uds_listener.rs  usage_dedup.rs  validation.rs
crates/unimatrix-server/src/eval/: mod.rs  profile.rs  runner.rs  scenarios.rs
crates/unimatrix-server/src/eval/profile/: error.rs  layer.rs  layer_graph_tests.rs  layer_tests.rs  mod.rs  tests.rs  types.rs  validation.rs
crates/unimatrix-server/src/eval/report/: aggregate.rs  mod.rs  render.rs  render_distribution_gate.rs  render_phase.rs  render_zero_regression.rs  tests.rs  tests_core_units.rs  tests_distribution.rs  tests_distribution_gate.rs  tests_distribution_pipeline.rs  tests_phase.rs  tests_phase_pipeline.rs
crates/unimatrix-server/src/eval/runner/: layer.rs  metrics.rs  mod.rs  output.rs  profile_meta.rs  (+3 more)
crates/unimatrix-server/src/import/: inserters.rs  mod.rs
crates/unimatrix-server/src/infra/: audit.rs  categories.rs  coherence.rs  config.rs  contradiction.rs  daemon.rs  embed_handle.rs  mod.rs  nli_handle.rs  outcome_tags.rs  pidfile.rs  rayon_pool.rs  registry.rs  scanning.rs  session.rs  shutdown.rs  timeout.rs  usage_dedup.rs  validation.rs
crates/unimatrix-server/src/mcp/: context.rs  identity.rs  knowledge_reuse.rs  mod.rs  serde_util.rs  tools.rs
crates/unimatrix-server/src/services/: behavioral_signals.rs  briefing.rs  co_access_promotion_tick.rs  co_access_promotion_tick_tests.rs  confidence.rs  contradiction_cache.rs  curation_health.rs  effectiveness.rs  gateway.rs  graph_enrichment_tick.rs  graph_enrichment_tick_tests.rs  index_briefing.rs  mod.rs  nli_detection.rs  nli_detection_tick.rs  observation.rs  phase_freq_table.rs  phase_freq_table_tests.rs  search.rs  status.rs  store_correct.rs  store_ops.rs  supersession.rs  typed_graph.rs  usage.rs
crates/unimatrix-server/src/uds/: hook.rs  listener.rs  mcp_listener.rs  mod.rs
crates/unimatrix-server/tests/: export_integration.rs  import_integration.rs  pipeline_e2e.rs
crates/unimatrix-store/: Cargo.toml
crates/unimatrix-store/src/: analytics.rs  audit.rs  counter.rs  counters.rs  cycle_review_index.rs  db.rs  dispatch.rs  embedding.rs  error.rs  goal_clusters.rs  handles.rs  hash.rs  injection_log.rs  lib.rs  metrics.rs  migration.rs  migration_compat.rs  observations.rs  pool_config.rs  query.rs  query_log.rs  query_log_tests.rs  read.rs  registry.rs  retention.rs  schema.rs  sessions.rs  signal.rs  tables.rs  test_helpers.rs  topic_deliveries.rs  txn.rs  write.rs  write_ext.rs
crates/unimatrix-store/src/migrate/: export.rs  format.rs  import.rs  mod.rs
crates/unimatrix-store/src/sqlite/: compat.rs  compat_handles.rs  compat_txn.rs  db.rs  injection_log.rs  migration.rs  mod.rs  read.rs  sessions.rs  signal.rs  txn.rs  write.rs  write_ext.rs
crates/unimatrix-store/tests/: migrate_import.rs  migration_v10_to_v11.rs  migration_v11_to_v12.rs  migration_v12_to_v13.rs  migration_v13_to_v14.rs  migration_v14_to_v15.rs  migration_v15_to_v16.rs  migration_v16_to_v17.rs  migration_v17_to_v18.rs  migration_v18_to_v19.rs  migration_v19_v20.rs  migration_v20_v21.rs  migration_v21_v22.rs  migration_v22_to_v23.rs  migration_v23_to_v24.rs  migration_v24_to_v25.rs  sqlite_parity.rs  sqlite_parity_specialized.rs
crates/unimatrix-vector/: Cargo.toml
crates/unimatrix-vector/src/: config.rs  error.rs  filter.rs  index.rs  lib.rs  persistence.rs  test_helpers.rs
product/research/ass-035/harness/: Cargo.toml
(+10360 files in other folders)
