[package]
name = "unimatrix-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
async = ["dep:tokio"]
test-support = [
  "unimatrix-store/test-support",
  "unimatrix-vector/test-support",
  "unimatrix-embed/test-support",
]

[dependencies]
unimatrix-store = { path = "../unimatrix-store" }
unimatrix-vector = { path = "../unimatrix-vector" }
unimatrix-embed = { path = "../unimatrix-embed" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
