[package]
name = "unimatrix-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Unimatrix shared business logic: confidence, co-access, project discovery, wire protocol, transport"

[dependencies]
unimatrix-core = { path = "../unimatrix-core" }
unimatrix-store = { path = "../unimatrix-store" }
serde = { workspace = true }
serde_json = "1"
sha2 = "0.10"
dirs = "6"
tracing = "0.1"
nix = { version = "0.31", features = ["socket", "process", "user"] }

[dev-dependencies]
tempfile = "3"
