[package]
name = "unimatrix-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Unimatrix shared business logic: confidence, co-access, project discovery, wire protocol, transport"

[dependencies]
unimatrix-core = { path = "../unimatrix-core" }
unimatrix-store = { path = "../unimatrix-store" }
serde = { workspace = true }
serde_json = "1"
sha2 = "0.10"
dirs = "6"
tracing = "0.1"
tokio = { version = "1", features = ["rt"] }
nix = { version = "0.31", features = ["socket", "process", "user"] }
# ADR-001: stable_graph feature only — no graphmap, matrix_graph, rayon, serde-1, or generate
petgraph = { version = "0.8", default-features = false, features = ["stable_graph"] }
thiserror = "2"

[features]
test-support = []

[dev-dependencies]
tempfile = "3"
unimatrix-engine = { path = ".", features = ["test-support"] }
