[package]
name = "unimatrix-learn"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared ML infrastructure and neural models for Unimatrix knowledge engine"

[dependencies]
ndarray = "0.16"
rand = "0.9"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
