[package]
name = "unimatrix-observe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Observation pipeline: JSONL parsing, feature attribution, hotspot detection, metric computation"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
unimatrix-core = { path = "../unimatrix-core" }
unimatrix-store = { path = "../unimatrix-store" }
unimatrix-learn = { path = "../unimatrix-learn" }

[dev-dependencies]
tempfile = "3"
unimatrix-store = { path = "../unimatrix-store", features = ["test-support"] }
