[package]
name = "unimatrix-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Unimatrix MCP knowledge server"

[[bin]]
name = "unimatrix-server"
path = "src/main.rs"

[lib]
name = "unimatrix_server"
path = "src/lib.rs"

[dependencies]
unimatrix-core = { path = "../unimatrix-core", features = ["async"] }
unimatrix-store = { path = "../unimatrix-store" }
unimatrix-engine = { path = "../unimatrix-engine" }
unimatrix-vector = { path = "../unimatrix-vector" }
unimatrix-embed = { path = "../unimatrix-embed" }
unimatrix-adapt = { path = "../unimatrix-adapt" }
unimatrix-observe = { path = "../unimatrix-observe" }
unimatrix-learn = { path = "../unimatrix-learn" }

nix = { version = "0.31", features = ["user"] }
fs2 = "0.4"
rmcp = { version = "=0.16.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
sha2 = "0.10"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }

[features]
default = ["mcp-briefing"]
mcp-briefing = []
test-support = ["unimatrix-store/test-support", "unimatrix-engine/test-support"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
unimatrix-server = { path = ".", features = ["test-support"] }
