[package]
name = "unimatrix-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Unimatrix MCP knowledge server"

[[bin]]
name = "unimatrix"
path = "src/main.rs"

[lib]
name = "unimatrix_server"
path = "src/lib.rs"

[dependencies]
unimatrix-core = { path = "../unimatrix-core", features = ["async"] }
unimatrix-store = { path = "../unimatrix-store" }
# production-safe; required by eval runner for kendall_tau and ranking metrics (ADR-003, nan-007)
unimatrix-engine = { path = "../unimatrix-engine", features = ["test-support"] }
unimatrix-vector = { path = "../unimatrix-vector" }
unimatrix-embed = { path = "../unimatrix-embed" }
unimatrix-adapt = { path = "../unimatrix-adapt" }
unimatrix-observe = { path = "../unimatrix-observe" }
unimatrix-learn = { path = "../unimatrix-learn" }

nix = { version = "0.31", features = ["user", "process"] }
fs2 = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
rmcp = { version = "=0.16.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
sha2 = "0.10"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
toml = "0.8"
rayon = "1"
rand = "0.9"
num_cpus = "1"
thiserror = "2"

[features]
default = ["mcp-briefing"]
mcp-briefing = []
test-support = ["unimatrix-store/test-support", "unimatrix-engine/test-support"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
unimatrix-server = { path = ".", features = ["test-support"] }
tracing-test = "0.2"
