[package]
name = "unimatrix-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
test-support = ["dep:tempfile"]

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
