[package]
name = "unimatrix-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
test-support = ["dep:tempfile"]

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tracing = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
